# polkadot-sdk-solochain-template

./: Cargo.toml
node/src/: chain_spec.rs
pallets/admin/: Cargo.toml
pallets/admin/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/atomic-swap/: Cargo.toml
pallets/atomic-swap/src/: lib.rs  tests.rs
pallets/collective/: Cargo.toml
pallets/collective/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/network/: Cargo.toml
pallets/network/rpc/: Cargo.toml
pallets/network/rpc/src/: lib.rs
pallets/network/runtime-api/src/: lib.rs
pallets/network/src/: accountant.rs  admin.rs  benchmarking.rs  delegate_staking copy.rs  delegate_staking.rs  info.rs  lib.rs  math.rs  mock.rs  proposal.rs  rewards.rs  staking copy.rs  staking.rs  subnet_validator.rs  tests.rs  utils.rs  validator_selection.rs  weights.rs
pallets/subnet-democracy/: Cargo.toml
pallets/subnet-democracy/src/: admin.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: impls.rs  lib.rs
