[package]
name = "pallet-subnet-democracy"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
	"serde",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { features = ["experimental"], workspace = true }
frame-system.workspace = true
log.workspace = true

pallet-balances.workspace = true

pallet-network = { version = "4.0.0-dev", default-features = false, path = "../network" }

sp-core = { features = ["serde"], workspace = true }
sp-io = { default-features = false, workspace = true }
sp-runtime = { features = ["serde"], workspace = true }
sp-std.workspace = true

pallet-insecure-randomness-collective-flip.workspace = true
strum = { version = "0.26.3", features = ["derive"], default-features = false }
strum_macros = { version = "0.26.3", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-network/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
